src/components/ProjectDetails.css
.ProjectDetails {
    height: 100%;
    overflow-y: scroll;
    padding-left: 20px;
    padding-right: 20px;
}

.ProjectDetails video {
    width: 100%;
    /*max-height: 480px;*/
    /*max-width: 720px;*/
}

/* This element defines the size the iframe will take.
   In this example we want to have a ratio of 25:14 */
.ProjectDetails-aspect-ratio {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 56.25%; /* The height of the item will now be 56.25% of the width. */
}

.ProjectDetails-aspect-ratio iframe {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
}

.ProjectDetails h1 {
    font-size: xx-large;
}

.ProjectDetails h2 {
    font-size: small;
}

.ProjectDetails-section {
    font-size: x-large;
    width: 100%;
    display: grid;
    grid-gap: 20px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 60px 70px 1fr 1fr 1fr 1fr 1.1fr;
    grid-template-areas:
            "title . ."
            "subtitle . ."
            "aa1 bb1 cc1"
            "dd1 ee1 ff1"
            "gg1 hh1 ii1"
            "aa2 bb2 cc2"
            "dd2 ee2 ff2";
}

.ProjectDetails-title {
    grid-area: title;
}

.projectDetails-subtitle {
    grid-area: subtitle;
}

.ProjectDetails-video1 {
    grid-area: aa1-start / aa1-start / ee1-end / ee1-end;
}

.ProjectDetails-description1 {
    grid-area: cc1-start / cc1-start / ii1-end / ii1-end;
}

.ProjectDetails-background1 {
    background-color: var(--color-text-secondary);
    grid-area: ee1-start / ee1-start / ii1-end / ii1-end;
}

.ProjectDetails-video2 {
    grid-area: bb2-start / bb2-start / ff2-end / ff2-end;
}

.ProjectDetails-description2 {
    grid-area: gg1-start / gg1-start / dd2-end / dd2-start;
}

.ProjectDetails-background2 {
    background-color: var(--color-text-secondary);
    grid-area: dd2-start / dd2-start / ee2-end / ee2-end;
}

@media screen and (min-width: 1131px) {

    .ProjectDetails-section {
        grid-template-rows: 60px 70px 1fr 0.1fr 1fr 1fr 1.1fr;
        font-size: xx-large;
    }

    .ProjectDetails-video1 {
        grid-area: aa1-start / aa1-start / hh1-end / hh1-end;
    }

    .ProjectDetails-description1 {
        grid-area: cc1-start / cc1-start / ii1-end / ii1-end;
    }

    .ProjectDetails-background1 {
        background-color: var(--color-text-secondary);
        grid-area: ee1-start / ee1-start / ii1-end / ii1-end;
    }

    .ProjectDetails-video2 {
        grid-area: bb2-start / bb2-start / ff2-end / ff2-end;
    }

    .ProjectDetails-description2 {
        grid-area: aa2-start / aa2-start / dd2-end / dd2-start;
    }

    .ProjectDetails-background2 {
        background-color: var(--color-text-secondary);
        grid-area: dd2-start / dd2-start / ee2-end / ee2-end;
    }
}

@media screen and (max-width: 719px) {
    .ProjectDetails-section {
        grid-template-columns: 0 1fr 0;
        grid-gap: 0;
        grid-template-rows: 0.1fr 0.1fr 0.5fr 0.5fr 0.1fr 1fr 0.3fr;
    }
    .ProjectDetails-video1 {
        grid-area: bb1;
    }

    .ProjectDetails-description1 {
        grid-area: ee1;
    }

    .ProjectDetails-video2 {
        grid-area: hh1;
    }

    .ProjectDetails-description2 {
        grid-area: bb2;
    }

}

